// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton Snapshots renders color change correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F8CC46",
      "borderRadius": 100,
      "height": 100,
      "justifyContent": "center",
      "margin": 8,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,.4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 100,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "./resources/free-breakfast@2x.png",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "width": 52,
        },
        Object {
          "height": 52,
        },
      ]
    }
  />
</View>
`;

exports[`IconButton Snapshots renders default correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2C7CF6",
      "borderRadius": 68,
      "height": 68,
      "justifyContent": "center",
      "margin": 8,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,.4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 68,
    }
  }
>
  <Image
    resizeMode="cover"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "width": 36,
        },
        Object {
          "height": 36,
        },
      ]
    }
  />
</View>
`;

exports[`IconButton Snapshots renders large correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2C7CF6",
      "borderRadius": 84,
      "height": 84,
      "justifyContent": "center",
      "margin": 8,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,.4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 84,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "./resources/free-breakfast@2x.png",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "width": 44,
        },
        Object {
          "height": 44,
        },
      ]
    }
  />
</View>
`;

exports[`IconButton Snapshots renders medium correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2C7CF6",
      "borderRadius": 68,
      "height": 68,
      "justifyContent": "center",
      "margin": 8,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,.4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 68,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "./resources/free-breakfast@2x.png",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "width": 36,
        },
        Object {
          "height": 36,
        },
      ]
    }
  />
</View>
`;

exports[`IconButton Snapshots renders small correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2C7CF6",
      "borderRadius": 52,
      "height": 52,
      "justifyContent": "center",
      "margin": 8,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,.4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 52,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "./resources/free-breakfast@2x.png",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "width": 28,
        },
        Object {
          "height": 28,
        },
      ]
    }
  />
</View>
`;

exports[`IconButton Snapshots renders xlarge correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2C7CF6",
      "borderRadius": 100,
      "height": 100,
      "justifyContent": "center",
      "margin": 8,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,.4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 100,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "./resources/free-breakfast@2x.png",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "width": 52,
        },
        Object {
          "height": 52,
        },
      ]
    }
  />
</View>
`;

exports[`IconButton Snapshots renders xsmall correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2C7CF6",
      "borderRadius": 36,
      "height": 36,
      "justifyContent": "center",
      "margin": 8,
      "opacity": 1,
      "shadowColor": "rgba(0,0,0,.4)",
      "shadowOffset": Object {
        "height": 1,
        "width": 1,
      },
      "shadowOpacity": 1,
      "shadowRadius": 1,
      "width": 36,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "./resources/free-breakfast@2x.png",
      }
    }
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        Object {
          "width": 20,
        },
        Object {
          "height": 20,
        },
      ]
    }
  />
</View>
`;
